# data-sync-ingestion-coding-challenge

./: CLAUDE.md  docker-compose.yml  setup.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
ingestion/: Dockerfile  pyproject.toml
ingestion/src/ingestion/: client.py  db.py
