[project]
name = "ingestion"
version = "0.1.0"
description = ""
authors = [
    {name = "Ying Wang",email = "ying@dagdafi.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "ingestion", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "respx (>=0.22.0,<0.23.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
